--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       ERRBIT_HOST: errbit-host
       ERRBIT_PROJECT_ID: xpaste-id
       ERRBIT_PROJECT_KEY: xpaste-key
+      RAILS_PUMA_WORKERS: 2
+      RAILS_PUMA_THREADS: 3
     depends_on:
       db:
         condition: service_healthy
